--- a/HTML/webpage/assests/styles/styles.css
+++ b/HTML/webpage/assests/styles/styles.css
@@ -1,7 +1,15 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+/* navbar style start */
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  box-shadow: 5px 5px 5px gray;
+  padding: 5px;
 }
 .nav-brand {
   display: flex;
@@ -29,9 +37,52 @@
 }
 .nav-items {
   display: flex;
+  align-items: center;
   width: 30%;
   justify-content: space-around;
 }
 .nav-links > select {
   border: none;
+}
+.btn > button {
+  padding: 5px;
+  border: 2px solid black;
+  background-color: transparent;
+}
+/* navbar style end */
+
+/* main section start */
+.main-section > .main-text {
+  text-align: center;
+}
+.main-section > .main-text > h2 {
+  padding: 10px;
+  font-family: "Poppins", serif;
+  font-weight: 700;
+  font-style: normal;
+  color: #002d62;
+}
+.main-section > .main-text > p {
+  font-family: "Poppins", serif;
+  padding: 10px;
+  font-style: normal;
+}
+/* main section end */
+.images {
+  padding: 10px;
+}
+.image-div {
+  background-color: red;
+  height: 18rem;
+  width: 18rem;
+}
+.image-div > .top > .top-1 {
+  display: flex;
+}
+.image-div > .top > .top-1 > .circle {
+  height: 10px;
+  width: 10px;
+  background-color: white;
+  border-radius: 5px;
+  margin: 2px;
 }
