add template engines ejs

--- a/Nodejs/ExpressJS/auththenticate/views/register.ejs
+++ b/Nodejs/ExpressJS/auththenticate/views/register.ejs
@@ -74,6 +74,7 @@
       </div>
       <div class="mb-3">
         <input type="submit" class="btn btn-primary" onclick="handleSubmit()" />
+        <a href="/" class="btn btn-secondary p-2 m-2">&larr; Home Page</a>
       </div>
     </form>
 
