--- a/Nodejs/ExpressJS/auththenticate/views/index.ejs
+++ b/Nodejs/ExpressJS/auththenticate/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="./styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -13,12 +13,21 @@
     />
   </head>
   <body>
-    <h1>Welcome To User Management</h1>
-    <button class="btn btn-warning p-2 m-2">
-      <a href="/users/register">Register New User</a>
-    </button>
-    <button class="btn btn-success p-2 m-2">
-      <a href="/users/view">View Users</a>
-    </button>
+    <h1 class="p-3 text-white">Welcome To User Management</h1>
+    <div
+      class="d-flex justify-content-center"
+      style="width: 50%; margin-left: auto; margin-right: auto"
+    >
+      <button class="btn btn-warning p-2 m-2">
+        <a href="/users/register" class="text-white text-decoration-none"
+          >Register New User</a
+        >
+      </button>
+      <button class="btn btn-success p-2 m-2">
+        <a href="/users/view" class="text-white text-decoration-none"
+          >View All Users</a
+        >
+      </button>
+    </div>
   </body>
 </html>
