--- a/Nodejs/ExpressJS/auththenticate/views/view.ejs
+++ b/Nodejs/ExpressJS/auththenticate/views/view.ejs
@@ -3,11 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Registered Users</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <h1>Registered Users</h1>
-    <table id="table">
+    <h1 class="bg-success p-3 text-white text-center">Registered Users</h1>
+    <table id="table" class="table table-striped">
       <thead>
         <tr>
           <th>UserName</th>
@@ -17,6 +23,9 @@
       </thead>
       <tbody id="tbody"></tbody>
     </table>
+
+    <a href="/" class="btn btn-secondary p-2 m-2">&larr; Home Page</a>
+
     <script>
       let table = document.getElementById("table");
       let tbody = document.getElementById("tbody");
