--- a/Nodejs/ExpressJS/auththenticate/views/index.ejs
+++ b/Nodejs/ExpressJS/auththenticate/views/index.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" type="image/svg+xml" href="favicon.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,12 +19,12 @@
       class="d-flex justify-content-center"
       style="width: 50%; margin-left: auto; margin-right: auto"
     >
-      <button class="btn btn-warning p-2 m-2">
+      <button class="btn btn-warning p-2 py-3 m-2">
         <a href="/users/register" class="text-white text-decoration-none"
           >Register New User</a
         >
       </button>
-      <button class="btn btn-success p-2 m-2">
+      <button class="btn btn-success p-2 py-3 m-2">
         <a href="/users/view" class="text-white text-decoration-none"
           >View All Users</a
         >
